force-app/main/default/objects/Document_Management__c/Document_Management__c.object-meta.xml
<CustomObject>
    <label>Document Management</label>
    <nameField>
        <label>Document Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents Management</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>