force-app/main/default/objects/Document_Management__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>6768</length>
    <type>LongTextArea</type>
</CustomField>