force-app/main/default/objects/Document_Management__c/fields/Content_Distribution_Link__c.field-meta.xml
<CustomField>
    <fullName>Content_Distribution_Link__c</fullName>
    <label>Content Distribution Link</label>
    <type>Url</type>
</CustomField>