force-app/main/default/objects/Document_Management__c/fields/data_fix__c.field-meta.xml
<CustomField>
    <fullName>data_fix__c</fullName>
    <label>data fix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>