force-app/main/default/objects/Document_Management__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ת.ז.</fullName>
            </value>
            <value>
                <fullName>דרכון</fullName>
            </value>
            <value>
                <fullName>אישור ניהול חשבון</fullName>
            </value>
            <value>
                <fullName>זכאות מביטוח לאומי</fullName>
            </value>
            <value>
                <fullName>קבלה</fullName>
            </value>
            <value>
                <fullName>רישיון נהיגה</fullName>
            </value>
            <value>
                <fullName>המלצת רופא או מנהל ישיר</fullName>
            </value>
            <value>
                <fullName>ספח</fullName>
            </value>
            <value>
                <fullName>אישור מהנדס או אישור אשפוז</fullName>
            </value>
            <value>
                <fullName>צו מינוי אופוטרופוסות</fullName>
            </value>
            <value>
                <fullName>חוזה שכירות</fullName>
            </value>
            <value>
                <fullName>ספח ילדים</fullName>
            </value>
            <value>
                <fullName>מסמך מזהה</fullName>
                <isActive>false</isActive>
                <label>מסמך מזהה</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>