force-app/main/default/objects/Document_Management__c/fields/Last_Content_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Content_Document_ID__c</fullName>
    <label>Last Content Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>