force-app/main/default/objects/Document_Management__c/fields/Number_of_FIles__c.field-meta.xml
<CustomField>
    <fullName>Number_of_FIles__c</fullName>
    <label>Number of FIles</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>