force-app/main/default/objects/Document_Management__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Documents Management</relationshipLabel>
    <relationshipName>Documents_Management</relationshipName>
    <type>Lookup</type>
</CustomField>